# motoFantasy

./: .gitignore  Pipfile  client_secret.json  config.ini.example  gui_example.py  learnpython3.py  live_timing.py  mfLists.py  motoF_tests.py  motoFantasy-sheets.py  motoFantasy.py  motoJupyter.ipynb  moto_fantasy.ipynb  moto_fantasy.py  moto_fantasy2.py  orig.main_lap.py  orig.ro.py  orig.sx_lap_times.py  points_calc.py  pyproject.toml  requests_test.py  rider_lists.csv  sheets.googleapis.com-python.json  sx_event_scrape.py  values.py
auth/: client_secret.json.example
data/: live_timing.csv  race_log.csv  rider_lists.csv
original-lap_times/: orig.main_lap.py
