[tool.poetry]
name = "motoFantasy"
version = "0.1.0"
description = ""
authors = ["Mark Whatcott <whatcott1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pygsheets = "^2.0.3"
requests = "^2.23.0"
pandas = "^1.0.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
